--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- 左侧导航栏 -->
     <nav>
         <div class="nav-container">
-            <div class="logo">MySite</div>
+            <div class="logo">AlphaWAN</div>
             <ul class="nav-links">
                 <li><a href="#home">Homepage</a></li>
                 <li><a href="#registration">Network Registration</a></li>
