--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<center>
 			<a href="https://sie2.github.io/" target="_blank" style="font-size:20px">Ziyue Zhang</a>,
 			<a href="zikunliu6.github.io" target="_blank" style="font-size:20px">Xianjin Xia</a>,
-			<a href="deepakv.web.illinois.edu" target="_blank" style="font-size:20px">Ruonan Li</a>
+			<a href="deepakv.web.illinois.edu" target="_blank" style="font-size:20px">Ruonan Li</a>,
             <a href="deepakv.web.illinois.edu" target="_blank" style="font-size:20px">Yuanqing Zheng</a>
 		</center>
 
