--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <body><div class="header">
 	<div class="container">
-        <center><h1>Towards Next-Generation Global IoT: Empowering Massive Connectivity with <br> Harmonious Multi-Network Coexistence</h1></center>
+        <center><h1>Towards Next-Generation Global IoT: Empowering Massive Connectivity with Harmonious Multi-Network Coexistence</h1></center>
 		<div class="gap-10"></div>
 		<!--------------------- Author Names --------------------->
 		<center>
