--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
 
         </td></tr>
       </tbody></table>
-    </center> 
+    </center> -->
 
-    <hr> -->
+    <hr> 
 
     <h2 style="text-align: center"> Bibtex </h2>
 	<pre style="background-color: #f4f4f4;">
