--- a/index.html
+++ b/index.html
@@ -298,8 +298,135 @@
         </td></tr>
       </tbody></table>
     </center> -->
+<!-- first section -->
+    <hr> 
+
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> Capacity limitations in operational LoRaWANs </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+    <div class="row no-gutters">
+        <div class="col">
+            <center><b>Content to be determined</b></center>
+            <img src="./resources/2.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+        <div class="col">
+            <center><b>Content to be determined</b></center>
+            <img src="./resources/1.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+    </div>
+
+<!-- second section -->
+    <hr> 
+
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> Homogeneous channel planning </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+    <center>
+      <center><b>Content to be determined</b></center>
+        <img style="width: 100%;" src="./resources/Problem_formulation.pdf.png">
+    </center>
+
+<!--third section -->
+   <hr> 
+
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> Spectrum sharing with misaligned channel plans </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+    <div class="row no-gutters">
+        <div class="col">
+            <center><b>Content to be determined</b></center>
+            <img src="./resources/Sec4_4_overlap_channel_plan.pdf.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+        <div class="col">
+            <center><b>Content to be determined</b></center>
+            <img src="./resources/Sec5_3_spectrum_sharing.pdf.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+    </div>
+
+  <!--fourth section -->
+   <hr> 
+
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> System implementation </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+        <center>
+      <center><b>Content to be determined</b></center>
+        <img style="width: 100%;" src="./resources/System_architecture.pdf.png">
+    </center>
+
+  <!--fifth section -->
+    <hr> 
+
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> Real-world performance </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+    <!-- <center>
+        <img style="width: 100%;" src="./resources/flow_model.jpg">
+    </center>
+
+    <div class="gap-10"></div> -->
+
+
+    <!-- <div class="row no-gutters">
+        <div class="col">
+            <center><b>Rough Surface (Grass)</b></center>
+            <video autoplay="" loop="" muted="" playsinline="" src="./resources/grass1-opt.webm" width="97%" style="border-radius:10px; border:1px solid black"></video>
+        </div>
+        <div class="col">
+            <center><b>Smooth Surface (Concrete)</b></center>
+            <video autoplay="" loop="" muted="" playsinline="" src="./resources/wall1-opt.webm" width="97%" style="border-radius:10px; border:1px solid black"></video>
+        </div>
+    </div> -->
+    <div class="row no-gutters">
+        <div class="col">
+            <center><b>Capacity gain</b></center>
+            <img src="./resources/capacity_gain.jpg" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+        <div class="col">
+            <center><b>Spectrum gain</b></center>
+            <img src="./resources/Spectrum_gain.jpg" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+        </div>
+    </div>
+
+    <!-- <div class="row no-gutters">
+        <div class="col">
+            <center><b>Capacity gain</b></center>
+            <img src="./resources/capacity_gain.jpg" width="100%" style="border: 1px solid #ccc; border-radius: 10px; ">
+        </div>
+        <div class="col">
+            <center><b>Spectrum gain</b></center>
+            <img src="./resources/Spectrum_gain.jpg" width="100%" style="border: 1px solid #ccc; border-radius: 10px; ">
+        </div>
+    </div> -->
 
     <hr> 
+
+
 
     <h2 style="text-align: center"> Bibtex </h2>
 	<pre style="background-color: #f4f4f4;">
