--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 	</div>
 </div>
 
+
+
 <div class="container">
 
     <!-- <center>
@@ -145,6 +147,27 @@
 
     <!--------------------- abstract --------------------->
     <!-- <div class="gap-10"></div> -->
+
+
+
+
+
+    <h2 style="text-align: center"> Bibtex </h2>
+ <center>
+    <pre style="background-color: #f4f4f4; width: 90%; text-align: left; white-space: pre-wrap;">
+ @inproceedings{Zhang2025AlphaWAN,
+ title={Towards Next-Generation Global IoT: Empowering Massive Connectivity with Harmonious Multi-Network Coexistence},
+ author={Ziyue Zhang, Xianjin Xia, Ruonan Li, and Yuanqing Zheng},
+ booktitle={Proceedings of the ACM SIGCOMM 2025 Conference},
+ year={2025},
+ doi = {https://doi.org/10.1145/3718958.3750504}
+ }
+    </pre>
+ </center>
+
+
+	<hr>
+
     <h2 style="text-align: center"> Abstract </h2>
     <!-- <div class="gap-10"></div> -->
     <center>
@@ -260,22 +283,7 @@
         </div>
     </div>
 
-    <hr> 
-
-
-
-    <h2 style="text-align: center"> Bibtex </h2>
-	<pre style="background-color: #f4f4f4;">
-@inproceedings{Zhang2025AlphaWAN,
-  title={Towards Next-Generation Global IoT: Empowering Massive Connectivity with Harmonious Multi-Network Coexistence},
-  author={Ziyue Zhang, Xianjin Xia, Ruonan Li, and Yuanqing Zheng},
-  booktitle={Proceedings of the ACM SIGCOMM 2025 Conference},
-  year={2025},
-  doi = {https://doi.org/10.1145/3718958.3750504}
-}
-    </pre>
-
-	<hr>
+<hr>
 
 	<b><span style="font-size:22px">Acknowledgements:</span></b><br>
 
