--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
-        Content to be determined
+        Our empirical studies on real-world operational LoRaWANs reveal substantial capacity degradation in two aspects: 
     </p></center>
 
     <div class="row no-gutters">
         <div class="col">
-            <center><b>Content to be determined</b></center>
-            <img src="./resources/2.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+            <center><b>Limited network capacity with significant performance gaps</b></center>
+            <img src="./resources/1.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
         <div class="col">
-            <center><b>Content to be determined</b></center>
-            <img src="./resources/1.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+            <center><b>Capacity contention across networks</b></center>
+            <img src="./resources/2.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
     </div>
 
@@ -298,5 +298,6 @@
     <script src="res/js/bootstrap.min.js"></script>
 
 </div>
+
 
 </body></html>
