--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
 
     <div class="row no-gutters">
         <div class="col">
-            <center><b>Limited network capacity with performance gaps</b></center>
+            <center><b>(1) Limited network capacity with performance gaps</b></center>
             <img src="./resources/1.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
         <div class="col">
-            <center><b>Capacity contention across networks</b></center>
+            <center><b>(2) Capacity contention across networks</b></center>
             <img src="./resources/2.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
     </div>
@@ -271,7 +271,7 @@
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
-        Our large-scale testbed deployment shows that AlphaWAN supports over 140 concurrent users with just 15 gateways and achieves a 3× capacity improvement. It also enables six LoRaWAN networks to coexist while maintaining high per-network throughput and over 85% PRR. The system approaches the theoretical limit of LoRaWAN capacity.
+        Our large-scale testbed deployment shows that AlphaWAN achieves a 3× capacity improvement and approaches the theoretical limit of network capacity. It also enables six LoRaWAN networks to coexist while maintaining high per-network throughput and over 85% PRR. 
     </p></center>
 
    
@@ -304,4 +304,5 @@
 
 
 </body></html>
+
 
