--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@ These capacity issues pose a fundamental scalability challenge for deploying LoR
 
     <div class="row no-gutters">
         <div class="col">
-            <center><b>(1) Capacity gaps of a single LoRaWAN</b></center>
-            <img src="./resources/1.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+            <center><b>Capacity gaps of a single LoRaWAN</b></center>
+            <img src="./resources/1.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
         <div class="col">
-            <center><b>(2) Capacity when two LoRaWANs coexist</b></center>
-            <img src="./resources/2.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+            <center><b>Capacity when two LoRaWANs coexist</b></center>
+            <img src="./resources/2.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;">
         </div>
     </div>
 
@@ -315,6 +315,7 @@ These capacity issues pose a fundamental scalability challenge for deploying LoR
 
 
 </body></html>
+
 
 
 
