--- a/index.html
+++ b/index.html
@@ -209,16 +209,21 @@ This means each network only gets a shrinking fraction of capacity as more netwo
 These capacity issues pose a fundamental scalability challenge for deploying LoRaWAN as a global IoT infrastructure.
 </p></center>
 
-    <div class="row no-gutters">
-        <div class="col">
-            <center><b>Capacity gaps of a single LoRaWAN</b></center>
-            <img src="./resources/1.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;">
-        </div>
-        <div class="col">
-            <center><b>Capacity when two LoRaWANs coexist</b></center>
-            <img src="./resources/2.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;">
+<div class="row no-gutters text-center align-items-center">
+    <div class="col">
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <b>Capacity gaps of a single LoRaWAN</b>
+            <img src="./resources/1.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
         </div>
     </div>
+    <div class="col">
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <b>Capacity when two LoRaWANs coexist</b>
+            <img src="./resources/2.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
+        </div>
+    </div>
+</div>
+
 
 
 
@@ -401,6 +406,7 @@ We summarize eight potential strategies for addressing the decoder contention pr
 
 
 </body></html>
+
 
 
 
