--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ Our measurements show that the 16-user concurrency cap applies not only within a
 This means each network only gets a shrinking fraction of capacity as more networks are deployed nearby.
 <br><br>
 
-These capacity issues pose a fundamental scalability challenge for deploying LoRaWAN as a global IoT infrastructure.
+<!--These capacity issues pose a fundamental scalability challenge for deploying LoRaWAN as a global IoT infrastructure.-->
 </p></center>
 
 <div class="row no-gutters text-center align-items-center">
@@ -406,6 +406,7 @@ We summarize eight potential strategies for addressing the decoder contention pr
 
 
 </body></html>
+
 
 
 
