--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ This means each network only gets a shrinking fraction of capacity as more netwo
     <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> Our solutions </h2>
+    <h2 style="text-align: center"> Overview of Our Solutions </h2>
     <div class="gap-10"></div>
 
 <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -417,6 +417,7 @@ We select four strategies for implementation in our \projectname system based on
 
 
 </body></html>
+
 
 
 
