--- a/index.html
+++ b/index.html
@@ -224,7 +224,21 @@ This means each network only gets a shrinking fraction of capacity as more netwo
     </div>
 </div>
 
+<!-- second section -->
+    <hr> 
 
+    <div class="gap-10"></div>
+    <h2 style="text-align: center"> Decoder contention problem </h2>
+    <div class="gap-10"></div>
+
+    <center><p style="width:90%; text-align: justify; white-space: normal;">
+        Content to be determined
+    </p></center>
+
+    <center>
+      <center><b>Content to be determined</b></center>
+        <img style="width: 100%;" src="./resources/Problem_formulation.pdf.png">
+    </center>
 
 
 <!-- second section -->
@@ -326,7 +340,7 @@ We select four strategies for implementation in our \projectname system based on
     <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> Homogeneous channel planning </h2>
+    <h2 style="text-align: center"> Strategy: Homogeneous channel planning </h2>
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -342,7 +356,7 @@ We select four strategies for implementation in our \projectname system based on
    <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> Spectrum sharing with misaligned channel plans </h2>
+    <h2 style="text-align: center"> Strategy: Spectrum sharing with misaligned channel plans </h2>
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -351,20 +365,24 @@ We select four strategies for implementation in our \projectname system based on
 
     <div class="row no-gutters">
         <div class="col">
-            <center><b>Content to be determined</b></center>
-            <img src="./resources/Sec4_4_overlap_channel_plan.pdf.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
-        </div>
+			<div style="display: flex; flex-direction: column; align-items: center;">
+            	<b>Content to be determined</b>
+            	<img src="./resources/Sec4_4_overlap_channel_plan.pdf.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
+        	</div>
+		</div>
         <div class="col">
-            <center><b>Content to be determined</b></center>
-            <img src="./resources/Sec5_3_spectrum_sharing.pdf.png" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
-        </div>
+			<div style="display: flex; flex-direction: column; align-items: center;">
+            	<b>Content to be determined</b>
+            	<img src="./resources/Sec5_3_spectrum_sharing.pdf.png" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain;  margin-top: 10px;">
+        	</div>
+		</div>
     </div>
 
   <!--fourth section -->
    <hr> 
 
     <div class="gap-10"></div>
-    <h2 style="text-align: center"> System implementation </h2>
+    <h2 style="text-align: center"> AlphaWAN implementation </h2>
     <div class="gap-10"></div>
 
     <center><p style="width:90%; text-align: justify; white-space: normal;">
@@ -388,19 +406,25 @@ We select four strategies for implementation in our \projectname system based on
     </p></center>
 
    
-    <div class="row no-gutters">
+    <div class="row no-gutters text-center align-items-center">
         <div class="col">
-            <center><b>Capacity gain (single network)</b></center>
-            <img src="./resources/capacity_gain.jpg" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
+			<div style="display: flex; flex-direction: column; align-items: center;">
+            	<b>Capacity gain (single network)</b>
+            	<img src="./resources/capacity_gain.jpg" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
+			</div>
         </div>
         <div class="col">
-            <center><b>Spectrum gain (Multi-network coexistence)</b></center>
-            <img src="./resources/Spectrum_gain.jpg" style="width: 100%; max-height: 450px; min-height: 150px; object-fit: contain;">
-        </div>
+			<div style="display: flex; flex-direction: column; align-items: center;">
+            	<b>Spectrum gain (Multi-network coexistence)</b>
+            	<img src="./resources/Spectrum_gain.jpg" style="width: 60%; max-height: 450px; min-height: 150px; object-fit: contain; margin-top: 10px;">
+        	</div>
+		</div>
     </div>
 
 <hr>
 
+
+	
 	<b><span style="font-size:22px">Acknowledgements:</span></b><br>
 
           We sincerely thank our shepherd and the anonymous reviewers for their constructive comments and invaluable suggestions that helped improve this paper. This work is supported by Hong Kong GRF under Grant No. 15218022, 15231424, 15211924, and 15216325.
@@ -417,6 +441,7 @@ We select four strategies for implementation in our \projectname system based on
 
 
 </body></html>
+
 
 
 
